@@ -8,5 +8,5 @@ Description: Embeddable Web content engine
 URL: https://wpewebkit.org
 Version: @PROJECT_VERSION@
 Requires: glib-2.0 libsoup-2.4
-Libs: -L${libdir} -lWPEWebKit
+Libs: -L${libdir} -lWPEWebKit-@WPE_API_VERSION@
 Cflags: -I${includedir}/wpe-@WPE_API_VERSION@ -I${includedir}/wpe-@WPE_API_VERSION@/WPE
